--- a/beta-tools/manifest.json
+++ b/beta-tools/manifest.json
@@ -1,21 +1,20 @@
 {
   "name": "beta-tools",
   "version": "1.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "用于开发环境同步缓存，以及查看常用文档",
   "icons": {
     "16": "img/logo.png",
     "48": "img/logo.png",
     "128": "img/logo.png"
  },
-  "browser_action": {
+  "action": {
     "default_title": "beta-tools",
     "default_icon": "img/logo.png",
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
